// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar Component snapshots should match snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  overflow: hidden;
  min-width: 240px;
  height: 0.25rem;
  border-radius: 0.125rem;
  background-color: #ffffff;
  border: solid 1px #034a76;
}

.c0:before {
  background-color: #034a76;
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  will-change: width;
  width: 0%;
  -webkit-transition: width 1s ease;
  transition: width 1s ease;
}

<ProgressBar
  appearance="primary"
  hideBorder={false}
  max={100}
  value={0}
>
  <div
    className="c0"
  />
</ProgressBar>
`;

exports[`ProgressBar Component snapshots should match snapshot 2`] = `
.c0 {
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  overflow: hidden;
  min-width: 240px;
  height: 0.25rem;
  border-radius: 0.125rem;
  background-color: #ffffff;
  border: solid 1px #034a76;
}

.c0:before {
  background-color: #034a76;
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  will-change: width;
  width: 42%;
  -webkit-transition: width 1s ease;
  transition: width 1s ease;
}

<ProgressBar
  appearance="primary"
  hideBorder={false}
  max={100}
  value={42}
>
  <div
    className="c0"
  />
</ProgressBar>
`;

exports[`ProgressBar Component snapshots should match snapshot 3`] = `
.c0 {
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  overflow: hidden;
  min-width: 240px;
  height: 0.25rem;
  border-radius: 0.125rem;
  background-color: #ffffff;
  border: solid 1px #034a76;
}

.c0:before {
  background-color: #034a76;
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  will-change: width;
  width: 100%;
  -webkit-transition: width 1s ease;
  transition: width 1s ease;
}

<ProgressBar
  appearance="primary"
  hideBorder={false}
  max={100}
  value={100}
>
  <div
    className="c0"
  />
</ProgressBar>
`;

exports[`ProgressBar Component snapshots should match snapshot 4`] = `
.c0 {
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  overflow: hidden;
  min-width: 240px;
  height: 0.25rem;
  border-radius: 0.125rem;
  background-color: #ffffff;
  border: solid 1px #f5a623;
}

.c0:before {
  background-color: #f5a623;
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  will-change: width;
  width: 42%;
  -webkit-transition: width 1s ease;
  transition: width 1s ease;
}

<ProgressBar
  appearance="warning"
  hideBorder={false}
  max={100}
  value={42}
>
  <div
    className="c0"
  />
</ProgressBar>
`;
